# murakumo

./: .gitignore  Cargo.toml  README.md  deny.toml
crates/murakumo/: Cargo.toml
crates/murakumo-gallery/: Cargo.toml
crates/murakumo-gallery/shaders/: bloom.wgsl  gallery.wgsl  material_prepass.wgsl  pbr_material.wgsl
crates/murakumo-gallery/src/: main.rs  params.rs
crates/murakumo/shaders/: aurora.wgsl  bubble.wgsl  crystal.wgsl  dissolve.wgsl  fire.wgsl  hologram.wgsl  lightning.wgsl  metal.wgsl  neon.wgsl  pbr_material.wgsl  shield.wgsl  smoke.wgsl  warp.wgsl  water.wgsl
crates/murakumo/src/: effect.rs  lib.rs  pass.rs
crates/murakumo/src/materials/: aurora.rs  bubble.rs  cloud.rs  crystal.rs  dissolve.rs  explosion.rs  fire.rs  glass.rs  grid.rs  hologram.rs  ice.rs  lava.rs  lightning.rs  metal.rs  mod.rs  neon.rs  portal.rs  rock.rs  shield.rs  skin.rs  smoke.rs  tornado.rs  warp.rs  water.rs
