[workspace]
resolver = "3"
members = [
    "crates/murakumo",
    "crates/murakumo-gallery",
]
# murakumo-gallery はデモ用バイナリでビルドが重いため、通常ビルドから除外。
# 明示的にビルドする場合: cargo build -p murakumo-gallery
default-members = ["crates/murakumo"]

# --- Local development override ---
# 手元の seimei / sabitori を編集しながら開発する場合は以下のコメントを外す。
# ../seimei, ../sabitori にそれぞれリポジトリが clone されている前提。
#
# [patch."https://github.com/Mutafika/seimei"]
# seimei = { path = "../seimei" }
#
# [patch."https://github.com/Mutafika/sabitori"]
# sabitori = { path = "../sabitori/crates/sabitori" }
# sabitori-style = { path = "../sabitori/crates/sabitori-style" }
# sabitori-widgets = { path = "../sabitori/crates/sabitori-widgets" }
# sabitori-input = { path = "../sabitori/crates/sabitori-input" }
