[package]
name = "murakumo-gallery"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
murakumo = { path = "../murakumo" }
sabitori = { git = "https://github.com/Mutafika/sabitori", version = "0.1" }
sabitori-style = { git = "https://github.com/Mutafika/sabitori", version = "0.1" }
sabitori-widgets = { git = "https://github.com/Mutafika/sabitori", version = "0.1" }
sabitori-input = { git = "https://github.com/Mutafika/sabitori", version = "0.1" }
seimei = { git = "https://github.com/Mutafika/seimei", version = "0.1", default-features = false }
wgpu = { version = "24", features = ["webgl"] }
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
web-time = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window"] }
wasm-bindgen = "0.2"
